--- a/index.Rmd
+++ b/index.Rmd
@@ -24,7 +24,7 @@ output:
 
 **O editor**
 
-Licenciado em Ciências, Licenciado em Matemática, Bacharel em Biologia e Bacharel em Nutrição. Especialista em Fitoterapia e em Farmacologia. Possui MBA em Big Data, além de Mestrado e Doutorado em Biofísica pela Universidade Federal do Rio de Janeiro (UFRJ), com grau também pela Universidade de Coimbra. Foi contemplado com bolsas de pesquisa da Coordenação de Aperfeiçoamento de Pessoal de Nível Superior (CAPES), do Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPq), do National Institutes of Health (NIH) e da Tess Research Foundation (TRF). É autor do livro Princípios de Bioética e coautor dos livros Neurociência da Mente e do Comportamento e Omega Fatty Acids in Brain and Neurological Health. Atua como revisor de periódicos internacionais, como o British Journal of Pharmacology, Frontiers in Neuroscience, Neurochemical Research, BMJ Open, PLOS One e Food Research International. Participa do corpo editorial da revista Neuroenergetics, Nutrition and Brain Health (Frontiers) e é consultor ad hoc de projetos submetidos ao Natural Sciences and Engineering Research Council of Canada (NSERC). Já atuou como professor de nível fundamental e médio na área de Ciências Biológicas no Instituto GayLussac, professor auxiliar em graduação no Centro Universitário IBMR em disciplinas do eixo Ciências Biológicas II (Bioquímica, Biofísica, Farmacologia e Fisiologia) e professor de pós-graduação nas áreas de Fisiologia e Bioquímica no mesmo centro. Foi também conteudista em Fisiologia, Hematologia, Bioquímica e Bioética na UNIGRANRIO e UNIVERSO. Realizou estágio pós-doutoral em Neuropatologia na Universidade da Califórnia (Davis), sob supervisão do Dr. Lee-Way Jin e da Dra. Izumi Maezawa. Atualmente, é coordenador adjunto na área de saúde e docente DNS I no Centro Universitário IBMR, além de professor auxiliar na Universidade Unigranrio. Possui conhecimento funcional em computação estatística com Python e R.
+Professor Hércules é Licenciado em Ciências, Licenciado em Matemática, Bacharel em Biologia e Nutrição; Especialista em Fitoterapia e em Farmacologia; Possui MBA em Big Data, além de Mestrado e Doutorado em Biofísica pela Universidade Federal do Rio de Janeiro (UFRJ), com grau pela Universidade de Coimbra. Foi contemplado com bolsas de pesquisa da Coordenação de Aperfeiçoamento de Pessoal de Nível Superior (CAPES), do Conselho Nacional de Desenvolvimento Científico e Tecnológico (CNPq), do National Institutes of Health (NIH) e da Tess Research Foundation (TRF). É autor do livro Princípios de Bioética e coautor dos livros Neurociência da Mente e do Comportamento e Omega Fatty Acids in Brain and Neurological Health. Atua como revisor de periódicos internacionais, como o British Journal of Pharmacology, Frontiers in Neuroscience, Neurochemical Research, BMJ Open, PLOS One e Food Research International. Participa do corpo editorial da revista Neuroenergetics, Nutrition and Brain Health (Frontiers) e é consultor ad hoc de projetos submetidos ao Natural Sciences and Engineering Research Council of Canada (NSERC). Realizou estágio pós-doutoral em Neuropatologia na Universidade da Califórnia (Davis), sob supervisão do Dr. Lee-Way Jin e da Dra. Izumi Maezawa. Atualmente, está vinculado do Laboratório de Erros Inatos do Metabolismo, Instituto de Bioquímica Médica Leopoldo de Meis, Universidade Federal do Rio de Janeiro (UFRJ).
 
 <br />
 
